[gd_scene load_steps=14 format=2]

[ext_resource path="res://addons/glam/controls/trailer/trailer.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/glam/controls/spinner/spinner.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/glam/controls/thumbnail_grid/thumbnail_grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/glam/icons/icon_progress_6.svg" type="Texture" id=4]
[ext_resource path="res://addons/glam/source_panel/details_pane.gd" type="Script" id=5]
[ext_resource path="res://addons/glam/controls/source_link/source_link.gd" type="Script" id=6]
[ext_resource path="res://addons/glam/controls/preview_image.gd" type="Script" id=7]
[ext_resource path="res://addons/glam/icons/icon_zoom.svg" type="Texture" id=8]
[ext_resource path="res://addons/glam/source_panel/source_panel.gd" type="Script" id=9]
[ext_resource path="res://addons/glam/icons/icon_stop.svg" type="Texture" id=10]
[ext_resource path="res://addons/glam/icons/volume.svg" type="Texture" id=11]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 217, 217, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 216, 216, 216, 0, 217, 217, 217, 27, 223, 223, 223, 168, 223, 223, 223, 229, 223, 223, 223, 229, 222, 222, 222, 167, 217, 217, 217, 27, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 215, 215, 215, 0, 215, 215, 215, 26, 223, 223, 223, 235, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 235, 215, 215, 215, 26, 215, 215, 215, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 162, 224, 224, 224, 255, 222, 222, 222, 181, 221, 221, 221, 54, 220, 220, 220, 51, 222, 222, 222, 191, 224, 224, 224, 255, 223, 223, 223, 162, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 225, 222, 222, 222, 167, 221, 221, 221, 23, 223, 223, 223, 196, 223, 223, 223, 179, 219, 219, 219, 50, 224, 224, 224, 255, 223, 223, 223, 225, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 148, 221, 221, 221, 23, 223, 223, 223, 210, 224, 224, 224, 255, 223, 223, 223, 194, 220, 220, 220, 52, 224, 224, 224, 255, 223, 223, 223, 225, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 223, 223, 223, 0, 223, 223, 223, 0, 222, 222, 222, 0, 216, 216, 216, 0, 216, 216, 216, 20, 223, 223, 223, 209, 224, 224, 224, 255, 223, 223, 223, 210, 223, 223, 223, 24, 223, 223, 223, 180, 224, 224, 224, 255, 223, 223, 223, 162, 223, 223, 223, 0, 0, 0, 0, 0, 216, 216, 216, 0, 217, 217, 217, 27, 223, 223, 223, 168, 223, 223, 223, 229, 222, 222, 222, 149, 216, 216, 216, 20, 223, 223, 223, 208, 224, 224, 224, 255, 223, 223, 223, 210, 214, 214, 214, 25, 223, 223, 223, 164, 224, 224, 224, 255, 223, 223, 223, 235, 215, 215, 215, 26, 215, 215, 215, 0, 215, 215, 215, 0, 215, 215, 215, 26, 223, 223, 223, 235, 224, 224, 224, 255, 222, 222, 222, 167, 220, 220, 220, 22, 222, 222, 222, 207, 224, 224, 224, 255, 223, 223, 223, 211, 220, 220, 220, 22, 223, 223, 223, 146, 223, 223, 223, 229, 223, 223, 223, 168, 217, 217, 217, 27, 216, 216, 216, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 162, 224, 224, 224, 255, 222, 222, 222, 181, 218, 218, 218, 21, 222, 222, 222, 207, 224, 224, 224, 255, 223, 223, 223, 212, 220, 220, 220, 22, 220, 220, 220, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 217, 217, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 225, 224, 224, 224, 255, 221, 221, 221, 53, 223, 223, 223, 193, 224, 224, 224, 255, 223, 223, 223, 213, 214, 214, 214, 25, 223, 223, 223, 146, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 226, 224, 224, 224, 255, 219, 219, 219, 50, 223, 223, 223, 180, 222, 222, 222, 198, 215, 215, 215, 26, 223, 223, 223, 164, 223, 223, 223, 225, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 162, 224, 224, 224, 255, 223, 223, 223, 189, 220, 220, 220, 51, 221, 221, 221, 54, 223, 223, 223, 180, 224, 224, 224, 255, 223, 223, 223, 162, 223, 223, 223, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 217, 217, 217, 27, 223, 223, 223, 235, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 235, 215, 215, 215, 26, 215, 215, 215, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 217, 217, 217, 27, 223, 223, 223, 168, 223, 223, 223, 229, 223, 223, 223, 229, 223, 223, 223, 168, 217, 217, 217, 27, 216, 216, 216, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 217, 217, 217, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 223, 223, 223, 0, 217, 217, 217, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 0
flags = 0
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="SourcePanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultsPane" type="HSplitContainer" parent="."]
margin_right = 1024.0
margin_bottom = 574.0
size_flags_vertical = 3

[node name="Results" type="ScrollContainer" parent="ResultsPane"]
margin_right = 762.0
margin_bottom = 574.0
rect_min_size = Vector2( 375, 0 )
size_flags_horizontal = 3
scroll_horizontal_enabled = false

[node name="_" type="VBoxContainer" parent="ResultsPane/Results"]
margin_right = 762.0
margin_bottom = 574.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThumbnailGrid" parent="ResultsPane/Results/_" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 762.0
columns = 5

[node name="Trailer" parent="ResultsPane/Results/_" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 762.0
margin_bottom = 18.0
mouse_filter = 2

[node name="DetailsPane" type="Panel" parent="ResultsPane"]
margin_left = 774.0
margin_right = 1024.0
margin_bottom = 574.0
rect_min_size = Vector2( 250, 0 )
rect_clip_content = true
script = ExtResource( 5 )

[node name="PreviewPopup" type="PopupPanel" parent="ResultsPane/DetailsPane"]
margin_top = 84.0
margin_right = 8.0
margin_bottom = 92.0

[node name="PreviewLarge" type="TextureRect" parent="ResultsPane/DetailsPane/PreviewPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
script = ExtResource( 7 )

[node name="NoAssetLabel" type="Label" parent="ResultsPane/DetailsPane"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -7.0
margin_right = 125.0
margin_bottom = 7.0
text = "No asset selected."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="PopupPanel" parent="ResultsPane/DetailsPane"]
margin_right = 8.0
margin_bottom = 22.0
mouse_filter = 2

[node name="Label" type="Label" parent="ResultsPane/DetailsPane/Tooltip"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 18.0

[node name="ScrollContainer" type="ScrollContainer" parent="ResultsPane/DetailsPane"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ResultsPane/DetailsPane/ScrollContainer"]
margin_right = 250.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayName" type="Label" parent="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 250.0
margin_bottom = 38.0
text = "Display Name"
align = 1
valign = 1
autowrap = true

[node name="PreviewImage" type="TextureRect" parent="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer"]
margin_top = 84.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 250 )
hint_tooltip = "Click to view full size image."
size_flags_horizontal = 3
expand = true
stretch_mode = 6
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spinner" parent="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/PreviewImage" instance=ExtResource( 2 )]
texture = ExtResource( 4 )
spinning = true

[node name="DownloadFormatLabel" type="Label" parent="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer"]
margin_left = -20.0
margin_top = 189.0
margin_right = 92.0
margin_bottom = 203.0
text = "Download Format:"

[node name="DownloadFormatOptionButton" type="OptionButton" parent="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer"]
margin_left = -20.0
margin_top = 189.0
margin_right = 44.0
margin_bottom = 209.0
size_flags_horizontal = 3
text = "Test1"
items = [ "Test1", null, false, 0, null, "Test2", null, false, 1, null, "Test3_100K_some_longThing", null, false, 2, null ]
selected = 0

[node name="Download" type="Button" parent="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 20.0
text = "Download"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="RichTextLabel" parent="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "No details."
text = "No details."
fit_content_height = true
scroll_active = false

[node name="StatusBar" type="HBoxContainer" parent="."]
margin_top = 578.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="SourceLabel" type="Label" parent="StatusBar"]
margin_top = 4.0
margin_right = 47.0
margin_bottom = 18.0
text = "Source:"

[node name="SourceLink" type="Button" parent="StatusBar"]
margin_left = 51.0
margin_right = 215.0
margin_bottom = 22.0
text = "https://example.com"
icon = SubResource( 2 )
script = ExtResource( 6 )

[node name="VSeparator" type="VSeparator" parent="StatusBar"]
visible = false
margin_left = 219.0
margin_right = 223.0
margin_bottom = 22.0

[node name="AccountButton" type="MenuButton" parent="StatusBar"]
visible = false
margin_left = 219.0
margin_right = 283.0
margin_bottom = 22.0
disabled = true
text = "Authenticating..."
flat = false

[node name="VSeparator1" type="VSeparator" parent="StatusBar"]
margin_left = 219.0
margin_right = 223.0
margin_bottom = 22.0

[node name="StatusLine" type="Label" parent="StatusBar"]
margin_left = 227.0
margin_top = 4.0
margin_right = 801.0
margin_bottom = 18.0
size_flags_horizontal = 3
clip_text = true

[node name="AudioControls" type="HBoxContainer" parent="StatusBar"]
visible = false
margin_left = 615.0
margin_right = 801.0
margin_bottom = 22.0

[node name="VSeparator" type="VSeparator" parent="StatusBar/AudioControls"]
margin_right = 4.0
margin_bottom = 22.0

[node name="StopAllButton" type="Button" parent="StatusBar/AudioControls"]
margin_left = 8.0
margin_right = 87.0
margin_bottom = 22.0
text = "Stop All"
icon = ExtResource( 10 )

[node name="VolumeIcon" type="TextureRect" parent="StatusBar/AudioControls"]
margin_left = 91.0
margin_right = 107.0
margin_bottom = 22.0
texture = ExtResource( 11 )
stretch_mode = 4

[node name="VolumeSlider" type="HSlider" parent="StatusBar/AudioControls"]
margin_left = 111.0
margin_right = 186.0
margin_bottom = 22.0
rect_min_size = Vector2( 75, 0 )
size_flags_vertical = 1
max_value = 2.0
step = 0.02
value = 1.0

[node name="VSeparator2" type="VSeparator" parent="StatusBar"]
margin_left = 805.0
margin_right = 809.0
margin_bottom = 22.0

[node name="CacheLabel" type="Label" parent="StatusBar"]
margin_left = 813.0
margin_top = 4.0
margin_right = 917.0
margin_bottom = 18.0
text = "Cache Size: 30M"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="StatusBar"]
margin_left = 921.0
margin_right = 925.0
margin_bottom = 22.0

[node name="TextureRect" type="TextureRect" parent="StatusBar"]
margin_left = 929.0
margin_top = 3.0
margin_right = 945.0
margin_bottom = 19.0
size_flags_vertical = 4
texture = ExtResource( 8 )

[node name="HSlider" type="HSlider" parent="StatusBar"]
margin_left = 949.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 75, 0 )
size_flags_vertical = 4
min_value = 1.0
max_value = 1.5
step = 0.01
value = 1.25

[connection signal="asset_selected" from="ResultsPane/Results/_/ThumbnailGrid" to="." method="_on_ThumbnailGrid_asset_selected"]
[connection signal="download_requested" from="ResultsPane/Results/_/ThumbnailGrid" to="." method="_on_download_requested"]
[connection signal="screen_entered" from="ResultsPane/Results/_/Trailer" to="." method="_on_Trailer_screen_entered"]
[connection signal="download_requested" from="ResultsPane/DetailsPane" to="." method="_on_download_requested"]
[connection signal="tag_selected" from="ResultsPane/DetailsPane" to="." method="_on_DetailsPane_tag_selected"]
[connection signal="gui_input" from="ResultsPane/DetailsPane/PreviewPopup" to="ResultsPane/DetailsPane" method="_on_PreviewPopup_gui_input"]
[connection signal="popup_hide" from="ResultsPane/DetailsPane/PreviewPopup" to="ResultsPane/DetailsPane" method="_on_PreviewPopup_popup_hide"]
[connection signal="gui_input" from="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/PreviewImage" to="ResultsPane/DetailsPane" method="_on_PreviewImage_gui_input"]
[connection signal="image_loaded" from="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/PreviewImage" to="ResultsPane/DetailsPane" method="_on_PreviewImage_image_loaded"]
[connection signal="item_selected" from="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/DownloadFormatOptionButton" to="ResultsPane/DetailsPane" method="_on_DownloadFormatOptionButton_item_selected"]
[connection signal="pressed" from="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/Download" to="ResultsPane/DetailsPane" method="_on_Download_pressed"]
[connection signal="meta_clicked" from="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/Details" to="ResultsPane/DetailsPane" method="_on_Details_meta_clicked"]
[connection signal="meta_hover_ended" from="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/Details" to="ResultsPane/DetailsPane" method="_on_Details_meta_hover_ended"]
[connection signal="meta_hover_started" from="ResultsPane/DetailsPane/ScrollContainer/VBoxContainer/Details" to="ResultsPane/DetailsPane" method="_on_Details_meta_hover_started"]
[connection signal="pressed" from="StatusBar/SourceLink" to="StatusBar/SourceLink" method="_on_pressed"]
[connection signal="pressed" from="StatusBar/AudioControls/StopAllButton" to="." method="_on_StopAllButton_pressed"]
[connection signal="value_changed" from="StatusBar/AudioControls/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="value_changed" from="StatusBar/HSlider" to="." method="_on_HSlider_value_changed"]
